# ai-mvp-platform

./: .env.template  .gitignore  CONTRIBUTING.md  FREEMIUM_PLAN.md  README.md  TASKS.md  TRACK_RECORD_FIXES.md  active_trades.json  bot_server.py  btc_analysis.py  daemon_analysis.txt  health_check.py  landing_preview.html  monitor_week.py  mql7.md  mt5_executor.py  pyproject.toml  requirements.txt  settings.md  settings.py  start_executor.py  start_tracker_after_boot.py  trade_guardian.py
ai_core/: __init__.py  config.py  decision_optimizer.py  nlp_processor.py  pipeline.py  predictive_model.py  recommendation_engine.py  utils.py
backend/: __init__.py
backend/api/: admin_manager.py  advanced_analytics.py  alert_dispatcher.py  alert_manager.py  alert_subscription.py  analyze_router.py  auth_manager.py  backtest_engine.py  daily_snapshot.py  (+34 more)
config/: .env.template  settings.py
configs/: model_config.yaml
data/: bot_analysis.json  bot_analysis_final.json  guardian_state.json  mt5_executor_state.json  tracker_cache.json  whilber.db
frontend/: about.html  admin.html  admin_alerts.html  alert-modal.js  alert_system.js  alerts_page.html  alerts_settings.html  chart_engine.js  contact.html  dashboard.html  dashboard_tracklink.js  guide.html  journal.html  landing.html  live_status.js  login.html  notif.js  payment.html  perf.js  performance.html  plan-ui.js  pricing.html  ranking_fix.js  register.html  risk_manager.html  robots.html  services.html  strategy_builder.html  strategy_builder.html.GOLDEN_WORKING  track_record.html  track_record_backup.html
notebooks/: 01_ai_analysis_demo.py
risk_profiles/: user_at_whilber_ai.json
scripts/: analyze_bx.py  bx_output.json  bx_stderr.txt  discover_symbols.py  health_check.py  patch_orchestrator.py  patch_orchestrator_c.py  rebuild_cache.py  test_bot.py  test_freemium.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_step02.py  test_step03.py  test_step04.py  test_step04b.py  test_step04c.py  test_step05.py
static/: manifest.json
trade_journals/: .json  test_at_test_com.json  user_at_whilber_ai.json
(+151 files in other folders)
